tests/baselines/reference/jsDeclarationsExportAssignedClassExpressionAnonymous.errors.txt
tests/cases/conformance/jsdoc/declarations/index.js(6,9): error TS2322: Type 'number' is not assignable to type 'undefined'.


==== tests/cases/conformance/jsdoc/declarations/index.js (1 errors) ====
    module.exports = class {
        /**
         * @param {number} p
         */
        constructor(p) {
            this.t = 12 + p;
            ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        }
    }